# django-admin-numeric-filter

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
admin_numeric_filter/: admin.py  forms.py
admin_numeric_filter/static/css/: admin-numeric-filter.css
admin_numeric_filter/static/js/: admin-numeric-filter.js  wNumb.min.js
admin_numeric_filter/templates/admin/: filter_numeric_range.html  filter_numeric_single.html  filter_numeric_slider.html
